--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Ryan Wickman Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Ryan Wickman</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -45,7 +45,7 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
             </li>
           </ul>
         </div>
@@ -53,12 +53,12 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead bg-primary text-white text-center">
+    <header class="masthead bg-info text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
-        <h1 class="text-uppercase mb-0">Start Bootstrap</h1>
+        <h1 class="text-uppercase mb-0">Ryan Wickman</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Web Developer - Graphic Artist - User Experience Designer</h2>
+        <h2 class="font-weight-light mb-0">Computer Scientist - Software Engineer - Data Scientist - Game Developer</h2>
       </div>
     </header>
 
@@ -75,7 +75,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/Instagram_bot.png" alt="Instagram Bot Picture">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -85,7 +85,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+              <img class="img-fluid" src="img/portfolio/Ranger_Danger.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -98,6 +98,7 @@
               <img class="img-fluid" src="img/portfolio/circus.png" alt="">
             </a>
           </div>
+          <!--
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -127,133 +128,125 @@
               </div>
               <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
             </a>
+            -->
           </div>
         </div>
       </div>
     </section>
 
     <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
+    <section class="bg-info text-white mb-0" id="about">
       <div class="container">
         <h2 class="text-center text-uppercase text-white">About</h2>
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">I am currently a Junior at University of Memphis majoring in Computer Science. I work as a Research Assistant in the Networking Lab in the Computer Science Department.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">In my free time I love to work on a multitude of projects, whether it be something that involves Machine Learning or maybe even a video game for fun!</p>
           </div>
         </div>
-        <div class="text-center mt-4">
+        <!-- <div class="text-center mt-4">
           <a class="btn btn-xl btn-outline-light" href="#">
             <i class="fas fa-download mr-2"></i>
             Download Now!
           </a>
-        </div>
+        </div> -->
       </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="skills">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">Skills</h2>
         <hr class="star-dark mb-5">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
+          <div class=" mx-auto">
+              <ul class="list-group mb-5">
+                  <li class="list-group-item">Python</li>
+                  <li class="list-group-item">Java</li>
+                  <li class="list-group-item">C++</li>
+                  <li class="list-group-item">C#</li>
+                  <li class="list-group-item">Unity</li>
+                  <li class="list-group-item">Bash</li>
+                  <li class="list-group-item">SQL</li>
+                  <li class="list-group-item">Cypher</li>
+                  <li class="list-group-item">JavaScript/jQuery</li>
+                  <li class="list-group-item">HTML</li>
+                  <li class="list-group-item">CSS</li>
+                  <li class="list-group-item">React</li>
+                  <li class="list-group-item">Bootstrap</li>
+                  <li class="list-group-item">GNU Octave</li>
+                  <li class="list-group-item">MATLAB</li>
+                  <li class="list-group-item">Perl</li>
+                  <li class="list-group-item">TensorFlow</li>
+                  <li class="list-group-item">scikit-learn</li>
+                  <li class="list-group-item">Machine Learning</li>
+                  <li class="list-group-item">Git</li>
+                  <li class="list-group-item">Networking</li>
+                  <li class="list-group-item">Algorithms</li>
+                  
+                </ul>
+                
+            <!-- <p class="lead">Python Java C++</p> -->
+
           </div>
         </div>
       </div>
-    </section>
+    </section> 
 
     <!-- Footer -->
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Location</h4>
+            <!-- <h4 class="text-uppercase mb-4">Location</h4>
             <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+              <br>Clark, MO 65243</p> -->
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
             <ul class="list-inline mb-0">
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fab fa-fw fa-facebook-f"></i>
                 </a>
-              </li>
-              <li class="list-inline-item">
+              </li> -->
+              <!-- <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fab fa-fw fa-google-plus-g"></i>
                 </a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-twitter"></i>
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/rwickman">
+                  <i class="fab fa-fw fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/ryan-wickman-771160144/">
                   <i class="fab fa-fw fa-linkedin-in"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fab fa-fw fa-dribbble"></i>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <h4 class="text-uppercase mb-4">About Freelancer</h4>
             <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
               <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-          </div>
+          </div> -->
         </div>
       </div>
     </footer>
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; Ryan Wickman Website 2018</small>
       </div>
     </div>
 
@@ -275,10 +268,14 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Instagram Bot</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="img-fluid mb-5" src="img/portfolio/Instagram_bot.png" alt="">
+              <p class="mb-5">Scripted in Python to build a bot with the ability to post, follow, and like asynchronously. 
+                I used an SQLite database as the backend database to store information/state and wrote SQL to query the database.
+                Utilized multitude of Python libraries and APIs such as PRAW, Beautiful Soup, Requests, and RegEx to scrape media from Reddit.
+                <br><a target = "_blank" href ="https://github.com/rwickman/Instagram-Bot">Source code</a>
+                </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -297,10 +294,19 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Ranger Danger</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="img-fluid mb-5" src="img/portfolio/Ranger_Danger.png" alt="">
+              <p class="mb-5"> I craeted this video game as part of Ludum Dare 42! The video game deploys procedural generation by utilizing a few different algorithms and is created using Unity and C#.
+                <br>The Algorithms used:  
+                <ul>
+                    <li>Poisson-Disk Sampling to place trees</li>
+                    <li>Voronoi Diagram to create points and complex paths</li>
+                    <li>Dijkstra Algorithm to find shortest path from player to some other point</li>
+                  </ul>
+                  <br><a target="_blank" href="https://convolutional.itch.io/ranger-danger">Play the game!</a>
+                  <br><a target="_blank" href="https://github.com/rwickman/RangerDanger">Source code</a>
+                  </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -319,10 +325,12 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Autonomous Car</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">Built from Donkey Car kit and API. Originally the API uses behavior cloning, but I decided to implement my own behavior through the usage of TensorFlow. Tha car is  able to detect certain object, such as a stop sign, and stop accordingly.
+                  I also used Jupyter Notebook for visualization
+                  </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -333,6 +341,7 @@
     </div>
 
     <!-- Portfolio Modal 4 -->
+  <!--
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -353,8 +362,10 @@
         </div>
       </div>
     </div>
-
+  -->
+  
     <!-- Portfolio Modal 5 -->
+    <!--
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -375,8 +386,9 @@
         </div>
       </div>
     </div>
-
+-->
     <!-- Portfolio Modal 6 -->
+  <!--
     <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
@@ -397,7 +409,7 @@
         </div>
       </div>
     </div>
-
+-->
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
