Had to rename pictures so they would render on page

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/Word_Suggestion_Page.png" alt="">
+              <img class="img-fluid" src="img/portfolio/WordSuggestionPage.png" alt="">
             </a>
           </div>
 
@@ -174,7 +174,7 @@
                   <i class="fas fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/CarDemo.png" alt="">
+              <img class="img-fluid" src="img/portfolio/Car_Demo.png" alt="">
             </a>
           </div>
 
@@ -470,7 +470,7 @@
                 <div class="col-lg-8 mx-auto">
                   <h2 class="text-secondary text-uppercase mb-0">Word Suggestion Research Project</h2>
                   <hr class="star-dark mb-5">
-                  <img class="img-fluid mb-5" src="img/portfolio/Word_Suggestion_Page.png" alt="">
+                  <img class="img-fluid mb-5" src="img/portfolio/WordSuggestionPage.png" alt="">
                   <p class="mb-5">A language model built with Keras, using TensorFlow as the back-end, and Python. There is also an accompanying demo webpage using HTML, CSS, and JavaScript. The model will predict the next word given a sequence of words. Additionally there is an option to use Locality-sensitive hashing (LSH) to find similar users to you and recommend words using each similar user's language model. In the repository I have a report on how it works (docs/Report/Word_Suggestions_Report.pdf).
                     <br><a target = "_blank" href ="https://github.com/rwickman/Word-Suggestion">Source code</a>
                   </p>
@@ -614,7 +614,7 @@
                 <div class="col-lg-8 mx-auto">
                   <h2 class="text-secondary text-uppercase mb-0">Car Demo</h2>
                   <hr class="star-dark mb-5">
-                  <img class="img-fluid mb-5" src="img/portfolio/CarDemo.png" alt="">
+                  <img class="img-fluid mb-5" src="img/portfolio/Car_Demo.png" alt="">
                   <p class="mb-5">A car customization demo I made while interning at AutoZone. It was built using React, JavaScript, HTML, and CSS. Also, had to use Blender for the car model and WebGL to render it on the screen.
                     <br><a target = "_blank" href ="https://youtu.be/ZPTDgOG3EX4">Demo Video</a>
                     <br><a target = "_blank" href ="https://github.com/rwickman/CarDemo">Source code</a>
